Using observable instead of promise for quotes list as promise not working properly with list-view on nativescript.

--- a/nativescript/app/quotes/quotes-list.component.html
+++ b/nativescript/app/quotes/quotes-list.component.html
@@ -1,7 +1,7 @@
 <div class="quotes-list">
   <GridLayout>
     <ListView
-        [items]="vm.lstQuotes"
+        [items]="vm.quotes$ | async"
         (loadMoreItems)="vm.onLoadMoreItemsRequested($event)">
       <template
           let-item="item"
