Quotes by category for web added.

--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -1,13 +1,13 @@
 <div style="float:left;width: 15%;">
   <ul>
     <li>
-      <a>All Quotes</a>
+      <a [routerLink]="['quotes']">All Quotes</a>
     </li>
     <li>
       <a [routerLink]="['quotes', 'author']">Quotes By Author</a>
     </li>
     <li>
-      <a>Quotes By Categories</a>
+      <a [routerLink]="['quotes', 'category']">Quotes By Categories</a>
     </li>
     <li>
       <a>My Favourites</a>
