Using observable instead of promise for authors list.

--- a/web/src/app/authors/authors-list.component.html
+++ b/web/src/app/authors/authors-list.component.html
@@ -1,7 +1,7 @@
 <div class="authors-list">
   <ul>
     <li
-        *ngFor="let author of vm.lstAuthors"
+        *ngFor="let author of vm.authors$ | async"
         (click)="selectAuthor(author.id)"
         [class.selected]="selectedAuthorId === author.id">
       <div>
