Authors list page added. Quotes by author added. Common side-drawer component added.

--- a/nativescript/app/authors/authors-list.component.html
+++ b/nativescript/app/authors/authors-list.component.html
@@ -1,4 +1,8 @@
-<ListView
+<ActionBar title="Authors">
+</ActionBar>
+
+<ngxp-side-drawer>
+  <ListView
     [items]="vm.authors$ | async">
   <template let-item="item">
     <StackLayout (tap)="showQuotesByAuthor(item.id)">
@@ -6,3 +10,4 @@
     </StackLayout>
   </template>
 </ListView>
+</ngxp-side-drawer>
