using categories observable for web version.

--- a/web/src/app/categories/categories-list.component.html
+++ b/web/src/app/categories/categories-list.component.html
@@ -1,7 +1,7 @@
 <div class="categories-list">
   <ul>
     <li
-        *ngFor="let category of vm.lstCategories"
+        *ngFor="let category of vm.categories$ | async"
         (click)="selectCategory(category.id)"
         [class.selected]="selectedCategoryId === category.id">
       <div>
