--- a/web/src/app/quotes/quotes.component.html
+++ b/web/src/app/quotes/quotes.component.html
@@ -1,7 +1,7 @@
 <div class="quotes-container">
   <div
       class="quotes-by-container"
-      *ngIf="quotesBy !== 'all'">
+      *ngIf="quotesBy !== 'all' && quotesBy !== 'favourites'">
     <authors-list
         *ngIf="quotesBy === 'author'"
         [selectedAuthorId]="authorId"
