--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -10,7 +10,7 @@
       <a [routerLink]="['quotes', 'category']">Quotes By Categories</a>
     </li>
     <li>
-      <a>My Favourites</a>
+      <a [routerLink]="['quotes', 'favourites']">My Favourites</a>
     </li>
     <li>
       <a>My Quotes</a>
