--- a/nativescript/app/shared/side-drawer.component.html
+++ b/nativescript/app/shared/side-drawer.component.html
@@ -7,7 +7,7 @@
       <Button text="Quotes" (tap)="navigateTo(['/quotes'])"></Button>
       <Button text="Authors" (tap)="navigateTo(['/authors'])"></Button>
       <Button text="Categories" (tap)="navigateTo(['/categories'])"></Button>
-      <Button text="My Favourites"></Button>
+      <Button text="My Favourites" (tap)="navigateTo(['/quotes', 'favourites'])"></Button>
       <Button text="My Quotes"></Button>
     </StackLayout>
   </StackLayout>
