Added my-quote list and form for web.

--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -13,7 +13,7 @@
       <a [routerLink]="['quotes', 'favourites']">My Favourites</a>
     </li>
     <li>
-      <a>My Quotes</a>
+      <a [routerLink]="['my-quotes']">My Quotes</a>
     </li>
   </ul>
 </div>
