Set mdl app layout. Showing author and category name in title in quotes by author or category page.

--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -1,22 +1,25 @@
-<div style="float:left;width: 15%;">
-  <ul>
-    <li>
-      <a [routerLink]="['quotes']">All Quotes</a>
-    </li>
-    <li>
-      <a [routerLink]="['quotes', 'author']">Quotes By Author</a>
-    </li>
-    <li>
-      <a [routerLink]="['quotes', 'category']">Quotes By Categories</a>
-    </li>
-    <li>
-      <a [routerLink]="['quotes', 'favourites']">My Favourites</a>
-    </li>
-    <li>
-      <a [routerLink]="['my-quotes']">My Quotes</a>
-    </li>
-  </ul>
-</div>
-<div style="float:left; width: 85%;">
-  <router-outlet></router-outlet>
-</div>
+<mdl-layout
+    mdl-layout-fixed-header
+    mdl-layout-fixed-drawer
+    #mdlLayout="mdlLayout">
+  <mdl-layout-header>
+      <mdl-layout-header-row>
+        <mdl-layout-title>{{title}}</mdl-layout-title>
+        <mdl-layout-spacer></mdl-layout-spacer>
+      </mdl-layout-header-row>
+  </mdl-layout-header>
+  <mdl-layout-drawer>
+      <mdl-layout-title>Quotes App</mdl-layout-title>
+      <nav class="mdl-navigation">
+        <a  *ngFor="let link of navMenu"
+            class="mdl-navigation__link"
+            [routerLink]="link.commands"
+            (click)="mdlLayout.closeDrawer()">
+          {{link.name}}
+        </a>
+      </nav>
+  </mdl-layout-drawer>
+  <mdl-layout-content>
+      <router-outlet></router-outlet>
+  </mdl-layout-content>
+</mdl-layout>
