--- a/x-shared/styles/_variables.scss
+++ b/x-shared/styles/_variables.scss
@@ -1,8 +1,8 @@
 @import "color-palletes";
 
 // Color Variables
-$color-primary: $palette-indigo-500;
-$color-secondary: $palette-indigo-700;
-$color-accent: $palette-pink-A200;
+$color-primary: "40, 116, 240";//69, 83, 153";
+$color-secondary: "109, 164, 255";//121, 146, 199";
+$color-accent: "255, 193, 13";//69, 195, 171";
 $color-primary-contrast: $color-dark-contrast;
 $color-accent-contrast: $color-dark-contrast;
