Applied mdl styles to web version.

--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -19,7 +19,7 @@
         </a>
       </nav>
   </mdl-layout-drawer>
-  <mdl-layout-content>
+  <mdl-layout-content class="content-container">
       <router-outlet></router-outlet>
   </mdl-layout-content>
 </mdl-layout>
