--- a/web/src/app/quotes/quotes.component.scss
+++ b/web/src/app/quotes/quotes.component.scss
@@ -2,6 +2,7 @@
   display: flex;
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 
 .quotes-by-container{
@@ -9,8 +10,16 @@
   flex-grow: 0;
   flex-shrink: 0;
   flex-basis: 200px;
+  margin-right: 15px;
 }
 
 .quotes-list-container {
   flex-grow: 1;
+  position: relative;
 }
+
+authors-list, categories-list, quotes-list {
+  height: 100%;
+  display: block;
+}
+
