--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -23,4 +23,4 @@
       <router-outlet></router-outlet>
   </mdl-layout-content>
 </mdl-layout>
-<dialog-outlet></dialog-outlet>
+<!--<dialog-outlet></dialog-outlet>-->
