--- a/web/src/app/quotes/quotes.component.scss
+++ b/web/src/app/quotes/quotes.component.scss
@@ -5,12 +5,18 @@
   overflow: hidden;
 }
 
-.quotes-by-container{
+.quotes-by-container {
   width: 200px;
   flex-grow: 0;
   flex-shrink: 0;
   flex-basis: 200px;
   margin-right: 15px;
+
+  &.small-screen {
+    width: 100%;
+    flex-basis: 100%;
+    margin-right: 0;
+  }
 }
 
 .quotes-list-container {
