--- a/web/src/app/my-quotes/new-quote/new-quote.component.scss
+++ b/web/src/app/my-quotes/new-quote/new-quote.component.scss
@@ -22,4 +22,11 @@
     }
   }
 
+  &.small-screen {
+    .title {
+      background-color: transparent;
+      color: $c-black;
+      font-size: 24px;
+    }
+  }
 }
