--- a/web/src/app/quotes/quotes.component.scss
+++ b/web/src/app/quotes/quotes.component.scss
@@ -1,8 +1,9 @@
 .quotes-container {
   display: flex;
-  width: 100%;
-  height: 100%;
+  width: calc(100% - 30px);
+  height: calc(100% - 30px);
   overflow: hidden;
+  position: absolute;
 }
 
 .quotes-by-container {
@@ -11,6 +12,8 @@
   flex-shrink: 0;
   flex-basis: 200px;
   margin-right: 15px;
+  height: 100%;
+  overflow: auto;
 
   &.small-screen {
     width: 100%;
@@ -22,6 +25,8 @@
 .quotes-list-container {
   flex-grow: 1;
   position: relative;
+  height: 100%;
+  overflow: auto;
 }
 
 authors-list, categories-list, quotes-list {
@@ -29,3 +34,9 @@ authors-list, categories-list, quotes-list {
   display: block;
 }
 
+@media (max-width: 480px) {
+  .quotes-container {
+    height: calc(100% - 5px);
+    width: calc(100% - 10px);
+  }
+}
