Added Roboto and Material Design Icon fonts. Added borderless-btn direcitve for android. Styling of quotes-list component.

--- a/nativescript/app/app.scss
+++ b/nativescript/app/app.scss
@@ -1,2 +1,17 @@
 @import "variables";
 @import "core.dark.android.scss";
+
+// Using Roboto font-family for whole application
+Page {
+  font-family: "Roboto", "Roboto-Regular";
+  font-weight: 400;
+}
+
+.text-light {
+  font-family: "Roboto", "Roboto-Light";
+  font-weight: 300;
+}
+
+.mdi {
+  font-family: "Material Icons", "MaterialIcons-Regular";
+}
