--- a/x-shared/styles/_variables.scss
+++ b/x-shared/styles/_variables.scss
@@ -17,6 +17,7 @@ $c-blue-grey-50: #ECEFF1;
 // grey palette
 $c-grey-200: #EEEEEE;
 $c-grey-300: #E0E0E0;
+$c-grey-800: #424242;
 
 // As our primary and accent colors are dark, using dark-contrast colors.
 $c-primary-contrast: $c-dark-contrast;
