--- a/nativescript/app/authors/authors-list.component.html
+++ b/nativescript/app/authors/authors-list.component.html
@@ -3,10 +3,17 @@
 
 <ngxp-side-drawer>
   <ListView
+    class="list-group"
     [items]="vm.authors$ | async">
   <template let-item="item">
-    <StackLayout (tap)="showQuotesByAuthor(item.id)">
-      <Label [text]="item.name" textWrap="true"></Label>
+    <StackLayout
+        class="list-group-item"
+        (tap)="showQuotesByAuthor(item.id)">
+      <Label
+          class="list-group-item-text"
+          [text]="item.name"
+          textWrap="true">
+      </Label>
     </StackLayout>
   </template>
 </ListView>
